--- a/index.html
+++ b/index.html
@@ -313,50 +313,6 @@
                         <span class="text-primary">June 2020 - September 2021</span>
                     </div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-4 d-print-none">
-                    <div class="flex-grow-1">
-                        <h4 class="mb-0"><a href="https://www.vincivc.com/" target="_blank" class="text-danger">Vinci
-                                Venture Capital&nbsp;<i class="fas fa-link"></i></a></h4>
-                        <div class="subheading text-dark mb-3">
-                            Investment Analyst
-                        </div>
-                        <ul>
-                            <li>
-                                Created Crunchbase e-mail automation and developed web scraping scripts enabling the
-                                origination of 100+ companies in a few minutes.
-                            </li>
-                            <li>
-                                Arranged 30+ meetings with high-potential companies and created 2 one-pagers that
-                                summarize business models and opportunities for the investment committee.
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="flex-shrink-0 text-right">
-                        <span class="text-primary font-weight-bold">Amsterdam, The Netherlands</span><br />
-                        <span class="text-primary">December 2020 - January 2022</span>
-                    </div>
-                </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-4 d-print-none">
-                    <div class="flex-grow-1">
-                        <h4 class="mb-0"><a href="https://istanbultip.istanbul.edu.tr/en/_" target="_blank"
-                                class="text-danger">Istanbul University, Faculty of
-                                Medicine&nbsp;<i class="fas fa-link"></i></a></h4>
-                        <div class="subheading text-dark mb-3">
-                            Medical Intern
-                        </div>
-                        <ul>
-                            <li>
-                                Completed rotations in <strong>General Surgery, Pediatrics, Internal Medicine,
-                                    Gynaecology, Neurology, Cardiology, Pulmonology, Emergency Medicine, Psychiatry,
-                                    Dermatology, Family Medicine, and Algology</strong>.
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="flex-shrink-0 text-right">
-                        <span class="text-primary font-weight-bold">Istanbul, Turkey</span><br />
-                        <span class="text-primary">August 2019 - July 2020</span>
-                    </div>
-                </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
@@ -386,6 +342,28 @@
                     <div class="flex-shrink-0 text-right">
                         <span class="text-primary font-weight-bold">Istanbul, Turkey</span><br />
                         <span class="text-primary">November 2019 - October 2020</span>
+                    </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-4 d-print-none">
+                    <div class="flex-grow-1">
+                        <h4 class="mb-0"><a href="https://istanbultip.istanbul.edu.tr/en/_" target="_blank"
+                                class="text-danger">Istanbul
+                                University, Faculty of
+                                Medicine&nbsp;<i class="fas fa-link"></i></a></h4>
+                        <div class="subheading text-dark mb-3">
+                            Medical Intern
+                        </div>
+                        <ul>
+                            <li>
+                                Completed rotations in <strong>General Surgery, Pediatrics, Internal Medicine,
+                                    Gynaecology, Neurology, Cardiology, Pulmonology, Emergency Medicine, Psychiatry,
+                                    Dermatology, Family Medicine, and Algology</strong>.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-shrink-0 text-right">
+                        <span class="text-primary font-weight-bold">Istanbul, Turkey</span><br />
+                        <span class="text-primary">August 2019 - July 2020</span>
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
@@ -528,7 +506,7 @@
                                 <b>English:</b> Native/Bilingual Proficiency (C2)
                             </li>
                             <li>
-                                <b>German:</b> Elementary Proficiency (A2)
+                                <b>German:</b> Elementary Proficiency (B1)
                             </li>
                         </ul>
                     </div>
