--- a/siir.html
+++ b/siir.html
@@ -9,7 +9,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta property="og:title" content="Göktuğ Aşcı, MD, MSc" />
-    <meta property="og:description" content="Data engineer and medical doctor who develops full-stack, cross-platform software" />
+    <meta property="og:description"
+        content="Data engineer and medical doctor who develops full-stack, cross-platform software" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/img/profile.png" />
     <meta property="og:url" content="https://www.drgoktugasci.com/" />
@@ -101,7 +102,7 @@
 <body id="page-top" class="bg-light">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-        <a class="navbar-brand js-scroll-trigger" href="index.html" >
+        <a class="navbar-brand js-scroll-trigger" href="index.html">
             <span class="d-block d-lg-none">Göktuğ Aşcı, MD, MSc</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
                     src="assets/img/profile.png" alt="" /></span>
@@ -710,7 +711,7 @@
     <footer class="footer">
         <div class="container p-3">
             <div class="text-center center-block">
-                <div class="text-muted mb-2">&copy; 2022 &#183; Made with <i class="text-danger fas fa-heart"></i> by
+                <div class="text-muted mb-2">&copy; 2023 &#183; Made with <i class="text-danger fas fa-heart"></i> by
                     Göktuğ Aşcı</div>
                 <a class="" href="mailto:drgoktugasci@gmail.com"><i
                         class="fas fa-2x fa-envelope social"></i></a>&nbsp;&nbsp;&nbsp;
