--- a/siir.html
+++ b/siir.html
@@ -711,7 +711,7 @@
     <footer class="footer">
         <div class="container p-3">
             <div class="text-center center-block">
-                <div class="text-muted mb-2">&copy; 2023 &#183; Made with <i class="text-danger fas fa-heart"></i> by
+                <div class="text-muted mb-2">Made with <i class="text-danger fas fa-heart"></i> by
                     Göktuğ Aşcı</div>
                 <a class="" href="mailto:drgoktugasci@gmail.com"><i
                         class="fas fa-2x fa-envelope social"></i></a>&nbsp;&nbsp;&nbsp;
