update German level

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                                 <b>English:</b> Native/Bilingual Proficiency (C2)
                             </li>
                             <li>
-                                <b>German:</b> Elementary Proficiency (B1)
+                                <b>German:</b> Intermediate (B1)
                             </li>
                         </ul>
                     </div>
