update floy description

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
                             <a href="https://www.floy.com/" target="_blank" class="text-danger">Floy:
-                                Maximize Human Health&nbsp;<i class="fas fa-link"></i></a>
+                                Supporting radiologists with AI&nbsp;<i class="fas fa-link"></i></a>
                         </h4>
 
                         <div class="subheading text-dark mb-3">
