--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
             opacity: 0.9;
         }
 
-
         @keyframes MoveUpDown {
 
             0%,
@@ -199,7 +198,32 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-2">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
-                            <a href="https://www.floy.com/" target="_blank" class="text-danger">Floy:
+                            <a href="https://www.adference.com/en" target="_blank" class="text-danger">Adference:
+                                The smartest optimization for Amazon Advertising&nbsp;<i class="fas fa-link"></i></a>
+                        </h4>
+                
+                        <div class="subheading text-dark mb-3">
+                            Senior Data Engineer
+                        </div>
+                        <ul>
+                            <li>
+                                Designed and built the environment (Astronomer, Fivetran, dbt, Cosmos, Snowflake)
+                                to modernize and make the existing product scalable as part of the evolution process.
+                            </li>
+                            <li>
+                                Supervised the renewal of the existing ETL/ELT pipelines.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-shrink-0 text-right">
+                        <span class="text-primary font-weight-bold">Berlin, Germany</span><br />
+                        <span class="text-primary">October 2023 - Present</span>
+                    </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-2">
+                    <div class="flex-grow-1">
+                        <h4 class="mb-0">
+                            <a href="https://en.floy.com/" target="_blank" class="text-danger">Floy:
                                 Supporting radiologists with AI&nbsp;<i class="fas fa-link"></i></a>
                         </h4>
 
@@ -223,7 +247,7 @@
                     </div>
                     <div class="flex-shrink-0 text-right">
                         <span class="text-primary font-weight-bold">Berlin, Germany</span><br />
-                        <span class="text-primary">July 2023 - Present</span>
+                        <span class="text-primary">July 2023 - October 2023</span>
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
