--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
                         <ul>
                             <li>
                                 Designed and built the environment (Astronomer, Fivetran, dbt, Cosmos, Snowflake)
-                                to modernize and make the existing product scalable as part of the evolution process.
+                                to modernize and make the existing product scalable as part of a major migration process.
                             </li>
                             <li>
-                                Supervised the renewal of the existing ETL/ELT pipelines.
+                                Supervised different squads during the refactoring of legacy ETL/ELT pipelines.
                             </li>
                         </ul>
                     </div>
