--- a/birthday.html
+++ b/birthday.html
@@ -152,7 +152,7 @@
     <script>
         $(document).ready(function () {
             let userAnswer = prompt("Şifreyi gir:");
-            if (userAnswer.toLocaleLowerCase() === "aşk") {
+            if (userAnswer.toLocaleLowerCase() === "1") {
                 $('body').addClass('heart-background');
                 $('.main-container').removeClass('d-none');
             } else {
