--- a/birthday.html
+++ b/birthday.html
@@ -91,6 +91,8 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9"
                         aria-label="Slide 10">
                     </button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11">
+                    </button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -133,6 +135,9 @@
                     <div class="carousel-item">
                         <img src="https://words-1.s3.eu-west-1.amazonaws.com/public/birthday/10.jpg" class="d-block"
                             alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://words-1.s3.eu-west-1.amazonaws.com/public/birthday/11.jpg" class="d-block" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
