--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
 
 <body id="page-top">
     <!-- Navigation-->
-    <!-- #experience -->
-    <a href="/birthday.html" class="d-print-none floating-button-top floating-button btn-warning">
+    <a href="#experience" class="d-print-none floating-button-top floating-button btn-warning">
         <i class="fa fa-arrow-down my-float"></i>
     </a>
     <a class="floating-button-bottom d-print-none floating-button btn-warning d-none">
@@ -1282,7 +1281,7 @@
     <footer class="footer d-print-none">
         <div class="container p-3">
             <div class="text-center center-block">
-                <div class="text-muted mb-2">Made with <i class="text-danger fas fa-heart"></i> by
+                <div class="text-muted mb-2">Made with <a href="/birthday.html"> <i class="text-danger fas fa-heart"></i></a> by
                     Göktuğ Aşcı</div>
                 <a class="" href="mailto:drgoktugasci@gmail.com"><i
                         class="fas fa-2x fa-envelope social"></i></a>&nbsp;&nbsp;&nbsp;
