update the portfolio

--- a/index.html
+++ b/index.html
@@ -207,8 +207,11 @@
                         </div>
                         <ul>
                             <li>
-                                Designed and built the environment (Astronomer, Fivetran, dbt, Cosmos, Snowflake)
-                                to modernize and make the existing product scalable as part of a major migration process.
+                                Lead the BI Squad to implement a headless BI solution (Cube) to optimize end-user facing dashboard performance.
+                            </li>
+                            <li>
+                                Designed and built the whole environment (Astronomer, Fivetran, dbt, Cosmos, Snowflake) to modernize and make the
+                                existing product scalable as part of a major migration process.
                             </li>
                             <li>
                                 Supervised different squads during the refactoring of legacy ETL/ELT pipelines.
