--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
                         </div>
                         <ul>
                             <li>
-                                Lead the BI Squad to implement a headless BI solution (Cube) to optimize end-user facing dashboard performance.
+                                Led the BI squad to implement a headless BI solution (Cube) to optimize end-user facing dashboard performance.
                             </li>
                             <li>
-                                Designed and built the whole environment (Astronomer, Fivetran, dbt, Cosmos, Snowflake) to modernize and make the
-                                existing product scalable as part of a major migration process.
+                                Designed and built the whole environment (Astronomer, Fivetran, dbt, Cosmos, Snowflake) to modernize and scale the
+                                existing product as part of a major migration process.
                             </li>
                             <li>
                                 Supervised different squads during the refactoring of legacy ETL/ELT pipelines.
