--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                 Led the BI squad to implement a headless BI solution (Cube) to optimize end-user facing dashboard performance.
                             </li>
                             <li>
-                                Designed and built a modern data infrastructure (Astronomer, Fivetran, dbt, Cosmos, Snowflake) to modernize and scale the
+                                Designed and built a modern data infrastructure (Astronomer, Fivetran, dbt, Cosmos, Snowflake) that scaled the
                                 existing product as part of a major migration process.
                             </li>
                             <li>
