--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                 Led a data team of 3 data specialists and a data annotation team of 4 radiologists.
                             </li>
                             <li>
-                                Designed and built ETL/ELT pipelines (Airflow, Airbyte, dbt, Kubernetes, Argo CD)
+                                Designed and built ETL/ELT pipelines (Airflow, Airbyte, dbt, Kubernetes, Argo CD, OTC)
                                 shortening the product development
                                 cycle by 90%.
                             </li>
