--- a/index.html
+++ b/index.html
@@ -876,6 +876,13 @@
                 <h6 class="mt-3">Certifications</h6>
                 <ul class="fa-ul mb-0">
                     <li>
+                        <a href="https://www.credly.com/badges/2ffcae89-2191-4494-9864-391cce478bd1/public_url" target="_blank"
+                            class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Astronomer
+                            &#183; Apache Airflow Fundamentals&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://www.credly.com/badges/a76db082-7fa5-4062-afdc-c6ecc6b890f3/public_url"
                             target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Amazon Web
