--- a/index.html
+++ b/index.html
@@ -198,6 +198,21 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-2">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
+                            <a class="text-danger">Stealth</a>
+                        </h4>
+                
+                        <div class="subheading text-dark mb-3">
+                            Co-Founder
+                        </div>
+                    </div>
+                    <div class="flex-shrink-0 text-right">
+                        <span class="text-primary font-weight-bold">Berlin, Germany</span><br />
+                        <span class="text-primary">February 2024 - Present</span>
+                    </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-2">
+                    <div class="flex-grow-1">
+                        <h4 class="mb-0">
                             <a href="https://www.adference.com/en" target="_blank" class="text-danger">Adference:
                                 The smartest optimization for Amazon Advertising&nbsp;<i class="fas fa-link"></i></a>
                         </h4>
