--- a/index.html
+++ b/index.html
@@ -157,11 +157,7 @@
                 </div>
 
                 <p class="lead introduction-text">
-                    I am <strong>a data engineer</strong> and <strong>a medical doctor</strong> who develops
-                    <strong>full-stack, cross-platform software</strong>. My passion is to bridge the gap between
-                    software engineering and medicine to generate <strong>data-driven and inexpensive solutions to
-                        automate and improve healthcare services by utilizing big data and machine learning
-                        technologies.</strong>
+                    I am <strong>a data specialist</strong>strong> who builds <strong>full-stack, cross-platform</strong>strong> software. My passion is to create value by generating <strong>data-driven and inexpensive</strong>strong> solutions with the help of <strong>big data and machine learning technologies</strong>strong>.
                 </p>
                 <div class="social-icons text-center d-lg-none d-print-none">
                     <a class="social-icon shadow" href="mailto:drgoktugasci@gmail.com"><i
