--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </div>
 
                 <p class="lead introduction-text">
-                    I am <strong>a data specialist</strong>strong> who builds <strong>full-stack, cross-platform</strong>strong> software. My passion is to create value by generating <strong>data-driven and inexpensive</strong>strong> solutions with the help of <strong>big data and machine learning technologies</strong>strong>.
+                    I am <strong>a data specialist</strong> who builds <strong>full-stack, cross-platform</strong> software. My passion is to create value by generating <strong>data-driven and inexpensive</strong> solutions with the help of <strong>big data and machine learning technologies</strong>.
                 </p>
                 <div class="social-icons text-center d-lg-none d-print-none">
                     <a class="social-icon shadow" href="mailto:drgoktugasci@gmail.com"><i
