--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                                 <b>English:</b> Native/Bilingual Proficiency (C2)
                             </li>
                             <li>
-                                <b>German:</b> Intermediate (B2)
+                                <b>German:</b> Upper Intermediate (B2)
                             </li>
                         </ul>
                     </div>
