--- a/index.html
+++ b/index.html
@@ -1299,7 +1299,7 @@
     <footer class="footer d-print-none">
         <div class="container p-3">
             <div class="text-center center-block">
-                <div class="text-muted mb-2">Made with <a href="/birthday.html"> <i class="text-danger fas fa-heart"></i></a> by
+                <div class="text-muted mb-2">Made with <i class="text-danger fas fa-heart"></i> by
                     Göktuğ Aşcı</div>
                 <a class="" href="mailto:drgoktugasci@gmail.com"><i
                         class="fas fa-2x fa-envelope social"></i></a>&nbsp;&nbsp;&nbsp;
