update page sources

--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    
     <meta property="og:title" content="Göktuğ Aşcı, MD, MSc" />
-    <meta property="og:description"
-        content="Data engineer and medical doctor who develops full-stack, cross-platform software" />
-
+    <meta property="og:description" content="Data engineer and medical doctor who develops full-stack, cross-platform software" />
     <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
     <meta property="og:image" content="assets/img/profile.png" />
     <meta property="og:url" content="https://www.drgoktugasci.com/" />
+
+    <title>Göktuğ Aşcı, MD, MSc</title>
+    <meta name="description" content="Data engineer and medical doctor who develops full-stack, cross-platform software">
+
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <link href="http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900" rel="stylesheet" type="text/css" />
+    <link href="css/styles.css" rel="stylesheet" />
+
+    <script async src="https://kit.fontawesome.com/64d5f4e34e.js" crossorigin="anonymous" data-mode="onDemand"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js" crossorigin="anonymous"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DL79QT8C8M"></script>
@@ -25,23 +35,10 @@
             dataLayer.push(arguments);
         }
         gtag("js", new Date());
-
         gtag("config", "G-DL79QT8C8M");
     </script>
+    <!-- End Global site tag (gtag.js) - Google Analytics -->
 
-    <title>Göktuğ Aşcı, MD, MSc</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
-    <!-- Academicons -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons/css/academicons.min.css"> -->
-    <!-- Google fonts-->
-    <link
-        href="http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900"
-        rel="stylesheet" type="text/css" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
         @media (max-width: 992px) {
             .navbar {
