--- a/index.html
+++ b/index.html
@@ -314,10 +314,10 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
-                            <a href="http://mealdoc.com/" target="_blank" class="text-danger">Mealdoc:
+                            <a class="text-danger">Mealdoc:
                                 AI-powered Healthy Diet&nbsp;<i class="fas fa-link"></i></a>
                         </h4>
-                        <div class="subheading text-dark  mb-3">
+                        <div class="subheading text-dark mb-3">
                             Co-Founder, Full-Stack Developer
                         </div>
                         <ul>
@@ -557,16 +557,14 @@
 
                         <h6 class="mt-3">Data Science & Big Data</h6>
                         <ul>
-                            <li>Apache Airflow | Apache Spark (PySpark) | Airbyte | Apache Kafka (Python) | dbt | Great
-                                Expectations | Data
-                                Modeling | Snowflake | Trino | MLflow |  Keras | scikit-learn | pandas | Metabase |
-                                Looker
-                                | Tableau</li>
+                            <li>Apache Airflow | Apache Spark (PySpark) | SQL | Fivetran | Airbyte | Apache Kafka (Python) | dbt | Great
+                                Expectations | Data Modeling | Snowflake | Datadog | MLflow |  Keras | scikit-learn | pandas | Metabase |
+                                Looker | Tableau</li>
                         </ul>
 
                         <h6>Back-End Development & DevOps</h6>
                         <ul>
-                            <li>Python | SQL | Scala | Bash Scripting | AWS | Azure | GitHub
+                            <li>Python | Terraform | Bash Scripting | AWS | Azure | GitHub
                                 Actions | Argo CD |
                                 MongoDB | PostgreSQL | Django | Flask | pytest | Docker | Kubernetes | Django Rest
                                 Framework | Heroku</li>
@@ -574,8 +572,8 @@
 
                         <h6>Front-End Development</h6>
                         <ul>
-                            <li>Vue.js | JavaScript | TypeScript | Apache Cordova | Vuetify | Bootstrap | Bulma |
-                                Electron | Adobe XD</li>
+                            <li>Ionic Framework | Capacitor | Vue.js | JavaScript | TypeScript | Apache Cordova | Vuetify | Bootstrap | Bulma |
+                                Electron | Figma</li>
                         </ul>
 
                     </div>
@@ -585,7 +583,7 @@
 
                         <h6 class="mt-3">Product Development</h6>
                         <ul>
-                            <li>GitHub | Atlassian JIRA/Confluence | Asana | Google Analytics | Google Firebase | Scrum
+                            <li>GitHub | Atlassian JIRA/Confluence | Google Ads | Google Analytics | Google Firebase | Scrum
                             </li>
                         </ul>
 
@@ -631,7 +629,7 @@
                     <div class="tab-pane container active" id="Crowdsourcing">
                         <ul class="fa-ul mb-0 mt-3">
                             <li class="mb-2">
-                                <a href="https://doccano-dash.herokuapp.com/" target="_blank" class="text-danger">
+                                <a href="https://github.com/gasci/doccano-dash" target="_blank" class="text-danger">
                                     <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Healdash &#183;
                                     Text annotation &#183;
                                     Implemenatation of the open source Doccano machine learning crowdsourcing tool
@@ -774,28 +772,13 @@
                     <div class="tab-pane container active" id="MobileWebApp">
                         <ul class="fa-ul mb-0 mt-3">
                             <li class="mb-2">
-                                Cardly: Learn German Smartly&nbsp;&#183;
-                                <a href="https://apps.apple.com/tr/app/cardly-learn-german-smartly/id1624501914?platform=iphone"
-                                    target="_blank" class="text-danger">
+                                <a class="">
                                     <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
-                                    iOS App
-                                    <i class="fas fa-link"></i>
-                                </a>&#183;
-                                <a href="https://play.google.com/store/apps/details?id=com.mealdoc.cardly&hl=en&gl=US"
-                                    target="_blank" class="text-danger">
-                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
-                                    Android App
-                                    <i class="fas fa-link"></i>
-                                </a>
-                                &#183;
-                                <a href="https://cardly-api.herokuapp.com/swagger/" target="_blank" class="text-danger">
-                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
-                                    Back-End API
-                                    <i class="fas fa-link"></i>
+                                    Cardly&nbsp;&#183; Learn German Smartly
                                 </a>
                             </li>
                             <li class="mb-2">
-                                <a href="https://github.com/gasci/german/" target="_blank" class="text-danger">
+                                <a href="https://github.com/gasci/german-words/" target="_blank" class="text-danger">
                                     <span class="fa-li"><i class="fas fa-code text-warning"></i></span>German
                                     Words &#183;
                                     Try out my weekend project to practice German and NoSQL with Flask.&nbsp;
@@ -803,25 +786,15 @@
                                 </a>
                             </li>
                             <li class="mb-2">
-                                <a href="https://www.mealdoc.com/en" target="_blank" class="text-danger">
+                                <a class="">
                                     <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Mealdoc &#183;
                                     Your personal diet assistant.
                                     We prepare artificial intelligence powered personalized diet lists. Enter your
                                     information and find personalized
                                     meal suggestions. Track your calorie intake. Collect your own recipes and discover
                                     healthy recipes.&nbsp;
-                                    <i class="fas fa-link"></i>
                                 </a>
                             </li>
-                            <!-- <li class="mb-2">
-                                <a href="https://www.curiosmo.com/en/" target="_blank" class="text-danger">
-                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Curiosmo &#183;
-                                    Your personalized exam
-                                    assistant. Learn by questions with explanations; customize your study
-                                    sessions.&nbsp;
-                                    <i class="fas fa-link"></i>
-                                </a>
-                            </li> -->
                         </ul>
                     </div>
                     <div class="tab-pane container" id="StaticWeb">
