--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         </div>
                     </div>
                     <div class="flex-shrink-0 text-right">
-                        <span class="text-primary font-weight-bold">Berlin, Germany</span><br />
+                        <span class="text-primary font-weight-bold">İzmir, Türkiye</span><br />
                         <span class="text-primary">February 2024 - Present</span>
                     </div>
                 </div>
@@ -341,7 +341,7 @@
                         </ul>
                     </div>
                     <div class="flex-shrink-0 text-right">
-                        <span class="text-primary font-weight-bold">Istanbul, Turkey</span><br />
+                        <span class="text-primary font-weight-bold">Istanbul, Türkiye</span><br />
                         <span class="text-primary">June 2020 - September 2021</span>
                     </div>
                 </div>
@@ -361,7 +361,7 @@
                             </li>
                             <li>
                                 Led a team of 25+ medical educators generating 9000+ questions and helping 600000+
-                                medical cases be studied, improving online medical education quality in Turkey.
+                                medical cases be studied, improving online medical education quality in Türkiye.
                             </li>
                             <li>
                                 Designed and implemented all front-end (Materialize.css, jQuery, Apache Cordova)
@@ -372,7 +372,7 @@
                         </ul>
                     </div>
                     <div class="flex-shrink-0 text-right">
-                        <span class="text-primary font-weight-bold">Istanbul, Turkey</span><br />
+                        <span class="text-primary font-weight-bold">Istanbul, Türkiye</span><br />
                         <span class="text-primary">November 2019 - October 2020</span>
                     </div>
                 </div>
@@ -394,7 +394,7 @@
                         </ul>
                     </div>
                     <div class="flex-shrink-0 text-right">
-                        <span class="text-primary font-weight-bold">Istanbul, Turkey</span><br />
+                        <span class="text-primary font-weight-bold">Istanbul, Türkiye</span><br />
                         <span class="text-primary">August 2019 - July 2020</span>
                     </div>
                 </div>
@@ -479,7 +479,7 @@
                         </div>
                     </div>
                     <div class="flex-shrink-0 text-right">
-                        <span class="text-primary font-weight-bold">Istanbul, Turkey</span><br />
+                        <span class="text-primary font-weight-bold">Istanbul, Türkiye</span><br />
                         <span class="text-primary">September 2014 - July 2020</span>
                     </div>
                 </div>
@@ -519,7 +519,7 @@
                         </div>
                     </div>
                     <div class="flex-shrink-0 text-right">
-                        <span class="text-primary font-weight-bold">Kocaeli, Turkey</span><br />
+                        <span class="text-primary font-weight-bold">Kocaeli, Türkiye</span><br />
                         <span class="text-primary">September 2009 - July 2014</span>
                     </div>
                 </div>
