update job description

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-2">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
-                            <a class="text-danger">Stealth</a>
+                            <a class="text-danger">Stealth Startup</a>
                         </h4>
                 
                         <div class="subheading text-dark mb-3">
