--- a/siir.html
+++ b/siir.html
@@ -185,7 +185,7 @@
                 <div class="card-body">
                     <p class="card-title">TUTULMA</p>
                     <p class="card-text">
-                        bir şey diyecektim,<br> iki şey söyledim.<br> bir, iki daha üç oldu<br> anlatması güç oldu.<br>
+                        bir şey diyecektim,<br> iki şey söyledim.<br> bir, iki derken üç oldu<br> anlatması güç oldu.<br>
                     </p>
                     <!-- <p class="card-text text-right">2020</p> -->
                 </div>
