keşif şiiri ekle

--- a/siir.html
+++ b/siir.html
@@ -129,6 +129,21 @@
 
             <div class="card shadow">
                 <div class="card-body">
+                    <p class="card-title">KEŞİF</p>
+                    <p class="card-text">
+                        bir gün<br>
+                        O'nunla tanışacaksın,<br>
+                        işte o gün anlayacaksın<br>
+                        evrenin seni<br>
+                        neden bu kadar<br>
+                        beklettiğini<br>
+                    </p>
+                    <p class="card-text text-right">2024</p>
+                </div>
+            </div>
+
+            <div class="card shadow">
+                <div class="card-body">
                     <p class="card-title">BEKLEYEN</p>
                     <p class="card-text">
                         Gelmeyen beklenir, <br>
