update job description

--- a/index.html
+++ b/index.html
@@ -191,12 +191,17 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-2">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
-                            <a class="text-danger">Stealth Startup</a>
+                            <a href="https://www.docorbit.com/" target="_blank" class="text-danger">DocOrbit: Radiology Second Opinion</a>
                         </h4>
                 
                         <div class="subheading text-dark mb-3">
-                            Co-Founder
+                            Co-Founder & CEO
                         </div>
+                        <ul>
+                            <li>
+                                We offer AI-assisted radiology second opinion for the peace of mind from the comfort of home.
+                            </li>
+                        </ul>
                     </div>
                     <div class="flex-shrink-0 text-right">
                         <span class="text-primary font-weight-bold">İzmir, Türkiye</span><br />
