--- a/index.html
+++ b/index.html
@@ -866,11 +866,11 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.credly.com/badges/a76db082-7fa5-4062-afdc-c6ecc6b890f3/public_url"
+                        <a href="https://www.credly.com/badges/adbab5a6-d04a-47fd-8bde-ec8dc1088641"
                             target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Amazon Web
                             Services
-                            &#183; AWS Certified Cloud Practitioner&nbsp;<i class="fas fa-link"></i>
+                            &#183; AWS Cloud Quest: Certified Cloud Practitioner&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li>
