--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
                         </div>
                         <ul>
                             <li>
-                                We offer AI-assisted radiology second opinion for the peace of mind from the comfort of home.
+                                Your radiology images are meticulously interpreted by expert radiologists holding the European Diploma in Radiology, and
+                                you receive comprehensive feedback.
                             </li>
                         </ul>
                     </div>
