--- a/index.html
+++ b/index.html
@@ -156,8 +156,17 @@
                 <p class="lead introduction-text">
                     I am <strong>a data specialist</strong> who builds <strong>full-stack, cross-platform</strong> software. My passion is to create value by generating <strong>data-driven and inexpensive</strong> solutions with the help of <strong>big data and machine learning technologies</strong>.
                 </p>
+                <p class="lead">I am currently leading the development of <a href="https://www.docorbit.com/" target="_blank"><b>DocOrbit</b></a>, an
+                    innovative platform designed to democratize access to high-quality healthcare.</p>
+                <ul class="lead introduction-text">
+                    <li>Mission: Making premium medical care accessible to everyone, regardless of location or socioeconomic status.
+                    </li>
+                    <li>Vision: Bridging the gap between patients and top-tier medical professionals through cutting-edge technology.
+                    </li>
+                    <li>Impact: Transforming lives by providing timely, expert medical consultations to underserved communities.</li>
+                </ul>
                 <div class="social-icons text-center d-lg-none d-print-none">
-                    <a class="social-icon shadow" href="mailto:drgoktugasci@gmail.com"><i
+                    <a class="social-icon shadow" href="mailto:goktug.asci@docorbit.com"><i
                             class="fas fa-envelope"></i></a>
                     <a class="social-icon shadow" href="https://www.linkedin.com/in/gokasci/" target="_blank"><i
                             class="fab fa-linkedin-in"></i></a>
@@ -166,8 +175,7 @@
                     <!-- <a class="social-icon shadow" href="https://scholar.google.com/citations?user=TxmhXEwAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar" style="font-size:1.5em"></i></a> -->
                 </div>
                 <div class="social-icons d-print-none d-none d-lg-block">
-                    <a class="social-icon shadow" href="mailto:drgoktugasci@gmail.com"><i
-                            class="fas fa-envelope"></i></a>
+                    <a class="social-icon shadow" href="mailto:goktug.asci@docorbit.com"><i class="fas fa-envelope"></i></a>
                     <a class="social-icon shadow" href="https://www.linkedin.com/in/gokasci/" target="_blank"><i
                             class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon shadow" href="https://github.com/gasci" target="_blank"><i
