--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         </h4>
                 
                         <div class="subheading text-dark mb-3">
-                            Co-Founder & CEO
+                            Co-founder & CEO
                         </div>
                         <ul>
                             <li>
