update DocOrbit experience

--- a/index.html
+++ b/index.html
@@ -199,21 +199,29 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-2">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
-                            <a href="https://www.docorbit.com/" target="_blank" class="text-danger">DocOrbit: Radiology Second Opinion</a>
+                            <a href="https://www.docorbit.com/" target="_blank" class="text-danger">DocOrbit: Top Medical Opinion</a>
                         </h4>
                 
                         <div class="subheading text-dark mb-3">
-                            Co-founder & CEO
+                            Co-founder
                         </div>
                         <ul>
                             <li>
-                                Your radiology images are meticulously interpreted by expert radiologists holding the European Diploma in Radiology, and
-                                you receive comprehensive feedback.
+                                Scaled DocOrbit to 50+ doctors, 10 AI products, and 3,000+ patients within the first year across all major medical
+                                fields.
+                            </li>
+                            <li>
+                                Led technical strategy and full-stack product development (Ionic, Vue, Capacitor, Django, DRF), delivering a secure,
+                                cross-platform experience.
+                            </li>
+                            <li>
+                                Built and optimized sales channels and formed strategic partnerships with healthcare organizations and insurers to drive
+                                adoption.
                             </li>
                         </ul>
                     </div>
                     <div class="flex-shrink-0 text-right">
-                        <span class="text-primary font-weight-bold">İzmir, Türkiye</span><br />
+                        <span class="text-primary font-weight-bold">Berlin, Germany</span><br />
                         <span class="text-primary">February 2024 - Present</span>
                     </div>
                 </div>
