--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
                         </div>
                         <ul>
                             <li>
-                                Scaled DocOrbit to 50+ health professionals, 5 AI products, and 3,000+ patients within the first year across all major medical
-                                fields.
+                                Led technical strategy and full-stack development of the product, development, and data platforms using Ionic, Vue,
+                                Capacitor, Django, DRF, Prefect, and Metabase to deliver a secure, cross-platform experience.
                             </li>
                             <li>
-                                Led technical strategy and full-stack product development (Ionic, Vue, Capacitor, Django, DRF), delivering a secure,
-                                cross-platform experience.
+                                Scaled DocOrbit to 50+ health professionals, 5 AI products, and 3,000+ patients within the first year across all major medical
+                                fields.
                             </li>
                             <li>
                                 Built and optimized sales channels and formed strategic partnerships with healthcare organizations and insurers to drive
