--- a/index.html
+++ b/index.html
@@ -836,9 +836,23 @@
                 <h5 class="text-warning mt-4">Publications</h5>
                 <ul class="fa-ul mb-0">
                     <li class="mb-2">
+                        <a href="https://www.frontiersin.org/journals/radiology/articles/10.3389/fradi.2025.1509377/full"
+                            target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>2025 | Diagnostic precision of a deep learning algorithm for the classification of non-contrast brain CT reports&nbsp;<i
+                                class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li class="mb-2">
+                        <a href="https://www.cureus.com/articles/173419-prevalence-of-carpal-tunnel-syndrome-symptoms-among-young-dentists#!/"
+                            target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>2023 | Prevalence of Carpal Tunnel Syndrome Symptoms Among Young Dentists&nbsp;<i
+                                class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li class="mb-2">
                         <a href="https://img1.wsimg.com/blobby/go/18b3d75e-e099-4577-a0b2-00756e97dcc4/downloads/Incidental%20pulmonary%20findings%20on%20chest%20compute.pdf?ver=1658984737208"
                             target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>Incidental pulmonary
+                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>2022 | Incidental pulmonary
                             findings on chest computed tomography scans of 3010 non-COVID patients in Istanbul&nbsp;<i
                                 class="fas fa-link"></i>
                         </a>
@@ -846,7 +860,7 @@
                     <li class="mb-2">
                         <a href="https://link.springer.com/article/10.1007/s00406-018-0948-5" target="_blank"
                             class="text-danger">
-                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>Effect of transcranial
+                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>2018 | Effect of transcranial
                             direct current stimulation on decision making and cognitive flexibility in gambling
                             disorder&nbsp;<i class="fas fa-link"></i>
                         </a>
@@ -854,7 +868,7 @@
                     <li class="mb-2">
                         <a href="https://www.brainstimjrnl.com/article/S1935-861X(17)30408-4/abstract" target="_blank"
                             class="text-danger">
-                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>Transcranial direct
+                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>2017 | Transcranial direct
                             current stimulation may enhance decision making in gambling disorder: A preliminary
                             double-blind sham-controlled study&nbsp;<i class="fas fa-link"></i>
                         </a>
