--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     </div>
                     <div class="flex-shrink-0 text-right">
                         <span class="text-primary font-weight-bold">Berlin, Germany</span><br />
-                        <span class="text-primary">October 2023 - Present</span>
+                        <span class="text-primary">October 2023 - May 2025</span>
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-2">
