update german level

--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                                 <b>English:</b> Native/Bilingual Proficiency (C2)
                             </li>
                             <li>
-                                <b>German:</b> Upper Intermediate (B2)
+                                <b>German:</b> Intermediate (B1)
                             </li>
                         </ul>
                     </div>
